# parabix-devel-mirror

./: .gitignore  .gitlab-ci.yml  All_good_test.u16  CMakeCache.txt  CMakeLists.txt  ImplementationGuide-RadicalGrep.md  README-icgrep-0.8.txt  README-icgrep-0.9.txt  README-icgrep-0.95.txt  README-icgrep-0.98.txt  README-icgrep-1.00.txt  README-icgrep.md  README-icgrep.txt  README-pinyingrep.md  README-radicalcount.md  README-radicalgrep.md  README-radicalgrep.txt  README.md  Uname.txt  gb10830.cpp  implementationGuide-RadicalGrep.md  implementationGuide-radical_count.md  pablo-syntax.md  pinyinggrep.cpp
icgrep/: CMakeLists.txt  array-test.cpp  base64.cpp  casefold.cpp  categories_Nd.h  cc_codegenobject.cpp  cc_codegenobject.h  cc_compiler.cpp  cc_compiler.h  cc_compiler_helper.cpp  cc_compiler_helper.h  character_deletion.cpp  character_deposit.cpp  compiler.cpp  compiler.h  compiler_helper.cpp  compiler_helper.h  do_grep.cpp  do_grep.h  gb18030.cpp  generate_predefined_ucd_functions.cpp  grep_engine.cpp  grep_engine.h  grep_interface.cpp  grep_interface.h  grep_options.py  grep_type.h  hrtime.h  icgrep-devel.config  icgrep-devel.files  icgrep-devel.includes  icgrep-linda.files  icgrep-linda.includes  icgrep-workspace.files  icgrep-workspace.includes  icgrep.config  icgrep.cpp  icgrep.creator  icgrep.files  icgrep.h  (+113 more)
icgrep/IDISA/: CudaDriver.h  idisa_avx_builder.cpp  idisa_avx_builder.h  idisa_builder.cpp  idisa_builder.h  idisa_i64_builder.cpp  idisa_i64_builder.h  idisa_nvptx_builder.cpp  idisa_nvptx_builder.h  idisa_sse_builder.cpp  idisa_sse_builder.h  idisa_target.cpp  idisa_target.h  llvm2ptx.h  s2p_gen.cpp  s2p_gen.h
icgrep/IR_Gen/: CBuilder.cpp  CBuilder.h  CudaDriver.h  FunctionTypeBuilder.h  idisa_avx_builder.cpp  idisa_avx_builder.h  idisa_builder.cpp  idisa_builder.h  idisa_i64_builder.cpp  idisa_i64_builder.h  idisa_nvptx_builder.cpp  idisa_nvptx_builder.h  idisa_sse_builder.cpp  idisa_sse_builder.h  idisa_target.cpp  idisa_target.h  llvm2ptx.h  ternary_peephole_pass.cpp  ternary_peephole_pass.h  tracegen.cpp  tracegen.h
icgrep/UCD/: BidiBrackets.h  BidiMirroring.h  Blocks.h  CaseFolding.cpp  CaseFolding.h  CaseFolding_txt.cpp  CaseFolding_txt.h  CompositionExclusions.h  DerivedAge.h  DerivedBidiClass.h  DerivedBinaryProperties.h  DerivedCombiningClass.h  DerivedCoreProperties.h  DerivedDecompositionType.h  DerivedGeneralCategory.h  DerivedJoiningGroup.h  DerivedJoiningType.h  DerivedNormalizationProps.h  DerivedNumericType.h  EastAsianWidth.h  Equivalence.cpp  Equivalence.h  GraphemeBreakProperty.h  HangulSyllableType.h  IndicPositionalCategory.h  IndicSyllabicCategory.h  Jamo.h  LineBreak.h  NameAliases.h  PropList.h  PropertyAliases.h  PropertyObjectTable.h  PropertyObjects.cpp  PropertyObjects.h  PropertyValueAliases.h  ScriptExtensions.h  Scripts.h  SentenceBreakProperty.h  SpecialCasing.h  UCD_Config.h  (+25 more)
icgrep/cc/: alphabet.cpp  alphabet.h  cc_compiler.cpp  cc_compiler.h  cc_compiler_target.cpp  cc_compiler_target.h  cc_kernel.cpp  cc_namemap.cpp  cc_namemap.hpp  multiplex_CCs.cpp  multiplex_CCs.h
icgrep/cmake/: FindLibunwind.cmake  VersionFromVCS.cmake
icgrep/combine/: README  Unicode.txt  UnicodeData.txt  UnicodeNames.txt  core.cpp  icGrep-output.csv  icGrep.xml  options.xml  propGen.cpp  propGen.h  propType.h  regexGen.cpp  regexGen.h  regexgen.cpp  regexgen.h  setup.sh  stringGen.cpp  stringGen.h  ugrep.cpp
icgrep/editd/: EditdCudaDriver.h  editd.cpp  editd_cpu_kernel.cpp  editd_cpu_kernel.h  editd_gpu_kernel.cpp  editd_gpu_kernel.h  editdscan_kernel.cpp  editdscan_kernel.h  pattern_compiler.cpp  pattern_compiler.h
icgrep/grep/: grep_engine.cpp  grep_engine.h  grep_kernel.cpp  grep_kernel.h
icgrep/include/: CMakeLists.txt
icgrep/kernels/: UCD_property_kernel.cpp  UCD_property_kernel.h  alignedprint.cpp  alignedprint.h  attributes.cpp  attributes.h  binding.cpp  binding.h  bitstream_gather_pdep_kernel.cpp  bitstream_gather_pdep_kernel.h  bitstream_pdep_kernel.cpp  bitstream_pdep_kernel.h  block_kernel.cpp  callback.cpp  callback.h  casefold_pipeline.cpp  casefold_pipeline.h  cc_kernel.cpp  cc_kernel.h  cc_scan_kernel.cpp  cc_scan_kernel.h  charclasses.cpp  charclasses.h  deletion.cpp  deletion.h  delmask_kernel.cpp  delmask_kernel.h  directorysearch.cpp  directorysearch.h  error_monitor_kernel.cpp  evenodd.cpp  evenodd.h  expand3_4.cpp  expand3_4.h  fake_stream_generating_kernel.cpp  fake_stream_generating_kernel.h  grapheme_kernel.cpp  grapheme_kernel.h  grep_kernel.cpp  grep_kernel.h  (+86 more)
icgrep/lz4/: LZ4Generator.cpp  LZ4Generator.h  LZ4GeneratorNew.cpp  LZ4GeneratorNew.h  LZ4GrepEngine.cpp  LZ4GrepEngine.h  LZ4GrepGenerator.cpp  LZ4GrepGenerator.h  lz4_base_generator.cpp  lz4_base_generator.h  lz4_decompression_generator.cpp  lz4_decompression_generator.h  lz4_frame_decoder.cpp  lz4_frame_decoder.h  lz4_grep_generator.cpp  lz4_grep_generator.h
icgrep/lzparabix/: LZParabixCompressorGenerator.cpp  LZParabixCompressorGenerator.h  LZParabixGenerator.cpp  LZParabixGenerator.h  LZParabixGrepGenerator.cpp  LZParabixGrepGenerator.h
icgrep/pablo/: arithmetic.h  bixnum.cpp  bixnum.h  boolean.h  branch.cpp  branch.h  builder.cpp  builder.hpp  carry_data.cpp  carry_data.h  carry_manager.cpp  carry_manager.h  carrypack_manager.cpp  carrypack_manager.h  codegenstate.cpp  codegenstate.h  compressed_carry_manager.cpp  compressed_carry_manager.h  expression_map.hpp  function.cpp  function.h  pabloAST.cpp  pabloAST.h  pablo_compiler.cpp  pablo_compiler.h  pablo_intrinsic.h  pablo_kernel.cpp  pablo_kernel.h  pablo_routines.cpp  pablo_routines.h  pablo_source_kernel.cpp  pablo_source_kernel.h  pablo_toolchain.cpp  pablo_toolchain.h  pablo_type.cpp  pablo_type.h  pe_advance.cpp  pe_advance.h  pe_all.cpp  pe_all.h  (+53 more)
icgrep/pablo-src/: debug.pablo  xml.pablo
icgrep/re/: casing.cpp  casing.h  collect_ccs.cpp  collect_ccs.h  exclude_CC.cpp  exclude_CC.h  grapheme_clusters.cpp  grapheme_clusters.h  parse_fixed_strings.cpp  parse_fixed_strings.h  parsefailure.cpp  printer_re.cpp  re_alt.cpp  re_alt.h  re_analysis.cpp  re_analysis.h  re_any.h  re_assertion.cpp  (+75 more)
(+2049 files in other folders)
